<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    <string name="general">Главная</string>
    <string name="favorites">Избранное</string>
    <string name="team">Команда</string>
    <string name="vacancy_search">Поиск вакансий</string>
    <string name="vacancy_search_field_hint">Введите запрос</string>
    <string name="from">от</string>
    <string name="to">до</string>
    <string name="no_salary">ЗП не указана</string>
    <string name="arrow_back">Arrow Back</string>
    <string name="vacancy">Вакансия</string>
    <string name="share_icon">Share Icon</string>
    <string name="favorites_icon">Изображение сердца для кнопки "Добавить в избранное"</string>
    <string name="logo_image">Logo image</string>
    <string name="experience_required">Требуемый опыт</string>
    <string name="vacancy_description">Описание вакансии</string>
    <string name="duties">Обязанности</string>
    <string name="requirements">Требования</string>
    <string name="key_skills">Ключевые навыки</string>
    <string name="contacts">Контакты</string>
    <string name="email">E-mail</string>
    <string name="phone">Телефон</string>
    <string name="similar_vacancies">Похожие вакансии</string>
    <string name="contacts_person">Контактное лицо</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="no_such_vacancies">Таких вакансий нет</string>
    <string name="found">Найдено</string>
    <string name="no_app_found">На устройстве не найдено подходящих для этого действия приложений</string>
    <string name="share_to">Поделиться вакансией через:</string>
    <string name="empty_share_text">Пустое сообщение</string>
    <string name="work_place">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="do_not_show_without_salary">Не показывать без ЗП</string>
    <string name="enter_sum">Введите сумму</string>
    <string name="expected_salary">Ожидаемая ЗП</string>
    <string name="filters_settings">Настройки фильтрации</string>
    <string name="no_internet_connection">Отсутствует подключение к интернету</string>
    <string name="salary_from_to">От %s до %s %s</string>
    <string name="salary_from">От %s %s</string>
    <string name="salary_to">До %s %s</string>
    <string name="industry_header">Выбор отрасли</string>
    <string name="enter_industry">Введите отрасль</string>
    <string name="choose">Выбрать</string>
    <string name="placeholder_image">Стилизованный персонаж в виде телефона в шапке держит лупу</string>
    <string name="empty_list">Список пуст</string>
    <string name="team_members">Над приложением работали</string>
    <string name="team_1">TheABCDEngineer</string>
    <string name="team_2">InnaLapwa</string>
    <string name="team_3">pogonat</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="choice_work_place">Выбор места работы</string>
    <string name="country">Страна</string>
    <string name="region">Регион</string>
    <string name="choice_country">Выбор страны</string>
    <string name="choice_region">Выбор региона</string>
    <string name="enter_region">Введите регион</string>
    <string name="apply">Применить</string>
    <string name="reset">Сбросить</string>
</resources>