<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.team.presentation.ui.TeamFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/team_horizontal_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/team_horizontal_margin" />

        <TextView
            android:id="@+id/screenTitle"
            style="@style/font_medium_22"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:paddingVertical="20dp"
            android:text="@string/team"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/teamMembers"
            style="@style/font_bold_32"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:paddingVertical="8dp"
            android:text="@string/team_members"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/screenTitle" />

        <TextView
            android:id="@+id/team_1"
            style="@style/font_medium_16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ellipsize="end"
            android:text="@string/team_1"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/teamMembers" />

        <TextView
            android:id="@+id/team_2"
            style="@style/font_medium_16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:text="@string/team_2"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/team_1" />

        <TextView
            android:id="@+id/team_3"
            style="@style/font_medium_16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:text="@string/team_3"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/team_2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
