<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/returnArrow"
        style="@style/image_buttons"
        android:background="@android:color/transparent"
        android:contentDescription="@string/arrow_back"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/screenTitle"
        style="@style/font_medium_22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/similar_vacancies"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="@id/returnArrow"
        app:layout_constraintStart_toEndOf="@id/returnArrow"
        app:layout_constraintTop_toTopOf="@id/returnArrow" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="120dp"
        android:indeterminateTint="@color/yp_blue"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/nothingFoundPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="223dp"
        android:layout_marginHorizontal="16dp"
        android:contentDescription="@string/placeholder_image"
        android:src="@drawable/img_placeholder_nothing_found"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/placeholderMessage"
        style="@style/font_medium_22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/empty_list"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nothingFoundPlaceholder" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/similarVacanciesList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/returnArrow"
        tools:itemCount="10"
        tools:listitem="@layout/list_item_vacancy_similar" />

</androidx.constraintlayout.widget.ConstraintLayout>