<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/returnArrow"
            style="@style/image_buttons"
            android:background="@android:color/transparent"
            android:contentDescription="@string/arrow_back"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/screenTitle"
            style="@style/font_medium_22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/vacancy"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintStart_toEndOf="@id/returnArrow"
            app:layout_constraintTop_toTopOf="@id/returnArrow"
            app:layout_constraintBottom_toBottomOf="@id/returnArrow" />

        <ImageButton
            android:id="@+id/shareButton"
            style="@style/image_buttons"
            android:background="@android:color/transparent"
            android:contentDescription="@string/share_icon"
            android:src="@drawable/ic_sharing"
            app:layout_constraintEnd_toStartOf="@id/favButton"
            app:layout_constraintTop_toTopOf="@id/returnArrow"
            app:layout_constraintBottom_toBottomOf="@id/returnArrow" />

        <ImageButton
            android:id="@+id/favButton"
            style="@style/image_buttons"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/favorites_icon"
            android:src="@drawable/ic_favorites_off"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/returnArrow"
            app:layout_constraintBottom_toBottomOf="@id/returnArrow" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/vac_detail_horizontal_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/vac_detail_horizontal_margin" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginTop="120dp"
            android:indeterminateTint="@color/yp_blue"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/vacancyName"
            style="@style/font_bold_32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ellipsize="end"
            android:textColor="?attr/colorOnPrimary"
            android:visibility="gone"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/returnArrow"
            tools:text="Android-разработчик"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/salary"
            style="@style/font_medium_22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:textColor="?attr/colorOnPrimary"
            android:visibility="gone"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/vacancyName"
            tools:text="от 100 000 ₽"
            tools:visibility="visible"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/employerCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/vac_details_card_backgrnd"
            android:padding="16dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/salary"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="@dimen/vac_detail_image_dimens"
                android:layout_height="@dimen/vac_detail_image_dimens"
                android:contentDescription="@string/logo_image"
                android:src="@drawable/padded_logo_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/employerName"
                style="@style/font_medium_22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/vac_detail_card_text_margin"
                android:ellipsize="end"
                android:textColor="@color/yp_black"
                android:visibility="gone"
                app:layout_constrainedWidth="true"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/logoImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/logoImage"
                app:layout_constraintBottom_toTopOf="@id/city"
                tools:text="Еда"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/city"
                style="@style/font_regular_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/vac_detail_card_text_margin"
                android:ellipsize="end"
                android:textColor="@color/yp_black"
                android:visibility="gone"
                app:layout_constrainedWidth="true"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/logoImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/employerName"
                app:layout_constraintBottom_toBottomOf="@id/logoImage"
                tools:text="Москва"
                tools:visibility="visible"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/experienceReq"
            style="@style/font_medium_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ellipsize="end"
            android:text="@string/experience_required"
            android:textColor="?attr/colorOnPrimary"
            android:visibility="gone"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/employerCard"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/experience"
            style="@style/font_regular_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:textColor="?attr/colorOnPrimary"
            android:visibility="gone"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/experienceReq"
            tools:text="От 1 года до 3 лет"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/employment"
            style="@style/font_regular_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:textColor="?attr/colorOnPrimary"
            android:visibility="gone"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/experience"
            tools:text="Полная занятость, Удаленная работа"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/descriptionTitle"
            style="@style/font_medium_22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/vacancy_description"
            android:textColor="?attr/colorOnPrimary"
            android:visibility="gone"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/employment"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/vacancyDescription"
            style="@style/font_regular_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:text="@string/duties"
            android:textColor="?attr/colorOnPrimary"
            android:visibility="gone"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/descriptionTitle"
            tools:text="
        • Разрабатывать новую функциональность приложения\n
        • Помогать с интеграцией нашего SDK в другие приложения\n
        • Проектировать большие новые модули\n
        • Писать UI- и unit-тесты\n
        • Следить за работоспособностью сервиса и устранять технический долг"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/keySkillsTitle"
            style="@style/font_medium_22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/key_skills"
            android:textColor="?attr/colorOnPrimary"
            android:visibility="gone"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/vacancyDescription"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/keySkills"
            style="@style/font_regular_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:textColor="?attr/colorOnPrimary"
            android:visibility="gone"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/keySkillsTitle"
            tools:text=" • Разрабатывать новую функциональность приложения\n
 • Помогать с интеграцией нашего SDK в другие приложения\n
 • Проектировать большие новые модули"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/contactsTitle"
            style="@style/font_medium_22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/contacts"
            android:textColor="?attr/colorOnPrimary"
            android:visibility="gone"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/keySkills"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/contactsPersonTitle"
            style="@style/font_medium_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/contacts_person"
            android:textColor="?attr/colorOnPrimary"
            android:visibility="gone"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/contactsTitle"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/contactsName"
            style="@style/font_regular_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:textColor="?attr/colorOnPrimary"
            android:visibility="gone"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/contactsPersonTitle"
            tools:text="Ирина"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/emailTitle"
            style="@style/font_medium_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/email"
            android:textColor="?attr/colorOnPrimary"
            android:visibility="gone"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/contactsName"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/email"
            style="@style/font_regular_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:textColor="@color/yp_blue"
            android:visibility="gone"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/emailTitle"
            tools:text="i.lozgkina@yandex.ru" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/phonesList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintBottom_toTopOf="@id/similarVacanciesButton"
            tools:itemCount="4"
            tools:listitem="@layout/list_item_phone"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/similarVacanciesButton"
            style="@style/font_medium_16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:elevation="0dp"
            android:paddingVertical="20dp"
            android:text="@string/similar_vacancies"
            android:textAllCaps="false"
            android:textColor="@color/yp_white"
            android:visibility="gone"
            app:backgroundTint="@color/yp_blue"
            app:cornerRadius="12dp"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/phonesList"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>